5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1832_1656.log
== TEST (2019-06-13 18:38:17) 
-- CODE:
from numpy import*
s = str(input("digite os países das pessoas: ")).split(',')
cont = 0
for i in s:
	if s[i] == "BE":
		cont[0] = cont[0] + 1
	if s[i] == "ES":
		cont[1] = cont[1] + 1
	if s[i] == "FR":
		cont[2] = cont[2] + 1
	if s[i] == "IT":
		cont[3] = cont[3] + 1
	if s[i] == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:38:24) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in s:
	if s[i] == "BE":
		cont[0] = cont[0] + 1
	if s[i] == "ES":
		cont[1] = cont[1] + 1
	if s[i] == "FR":
		cont[2] = cont[2] + 1
	if s[i] == "IT":
		cont[3] = cont[3] + 1
	if s[i] == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:38:52) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in s:
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:39:20) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in s:
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:26) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in s:
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:47) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in s:
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(cont):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:07) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(size(s), dtype=int)
contt = 0
for j in range(size(cont)):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:51) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in range(size(cont)):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:07:09) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in range(size(cont)):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:08:41) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in (size(s):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in size(cont):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
File "XXXX", line 4
    for i in (size(s):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:08:50) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in size(s):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in size(cont):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:05) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in size(s):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in size(cont):
	z[contt] = j
	contt = contt + 1
print(contt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:33) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in range(size(cont)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:57) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont[i]))
z = zeros(s, dtype=int)
contt = 0
for j in range(size(cont)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:09) 
-- CODE:
from numpy import*
s = str(input("digite os paises das pessoas: ")).split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
z = zeros(s, dtype=int)
contt = 0
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:40) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
z = zeros(s, dtype=int)
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
contt = 0
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:35) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
for i in range(size(s)):
	if i == "BE":
		cont[0] = cont[0] + 1
	if i == "ES":
		cont[1] = cont[1] + 1
	if i == "FR":
		cont[2] = cont[2] + 1
	if i == "IT":
		cont[3] = cont[3] + 1
	if i == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
contt = 0
z = zeros(s, dtype=int)
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:20:46) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
for i in range(size(s)):
	if s[i].upper() == "BE":
		cont[0] = cont[0] + 1
	if s[i].upper() == "ES":
		cont[1] = cont[1] + 1
	if s[i].upper() == "FR":
		cont[2] = cont[2] + 1
	if s[i].upper() == "IT":
		cont[3] = cont[3] + 1
	if s[i].upper() == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
contt = 0
z = zeros(s, dtype=int)
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:24:20) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
for i in range(size(s)):
	if s[i].upper() == "BE":
		cont[0] = cont[0] + 1
	if s[i].upper() == "ES":
		cont[1] = cont[1] + 1
	if s[i].upper() == "FR":
		cont[2] = cont[2] + 1
	if s[i].upper() == "IT":
		cont[3] = cont[3] + 1
	if s[i].upper() == "PT":
		cont[4] = cont[4] + 1
print(max(cont))
contt = 0
z = zeros(s, dtype=int)
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:04) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
z = zeros(s, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(cont))
contt = 0
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:36) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
z = zeros(cont, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(cont))
contt = 0
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:33:48) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
z = zeros(cont, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
contt = 0
for j in range(size(s)):
	z[contt] = j
	contt = contt + 1
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:49) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
cont = 0
z = zeros(cont, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:35:30) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
z = zeros(size(s), dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:35:47) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
z = zeros(size(s), dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- EXECUTION TIME:
1.10275
-- TEST CASE 1:
---- input:
IT,FR,BE,BE,BE,ES,PT
---- correct output:
3
[3 1 1 1 1]
---- user output:
3
[3 1 1 1 1 0 0]
-- TEST CASE 2:
---- input:
PT,FR,FR,FR,FR,FR,PT,PT,ES,PT,ES,ES,ES,PT,IT
---- correct output:
5
[0 4 5 1 5]
---- user output:
5
[0 4 5 1 5 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
BE,IT,BE,IT,IT,BE,PT,IT,ES,PT,IT,PT,IT,IT,ES,ES,FR,FR,BE,PT,FR,ES,ES,FR,PT,BE,IT,PT,IT,PT,PT,IT
---- correct output:
10
[ 5  5  4 10  8]
---- user output:
10
[ 5  5  4 10  8  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0
  0  0  0  0  0  0  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:03) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
z = zeros(size(s), dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:38:02) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
z = zeros(5, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:38:17) 
-- CODE:
from numpy import*
s = input("digite os paises das pessoas: ").split(',')
z = zeros(5, dtype=int)
for i in range(size(s)):
	if s[i].upper() == "BE":
		z[0] = z[0] + 1
	if s[i].upper() == "ES":
		z[1] = z[1] + 1
	if s[i].upper() == "FR":
		z[2] = z[2] + 1
	if s[i].upper() == "IT":
		z[3] = z[3] + 1
	if s[i].upper() == "PT":
		z[4] = z[4] + 1
print(max(z))
print(z)
-- EXECUTION TIME:
0.968186
-- TEST CASE 1:
---- input:
IT,FR,BE,BE,BE,ES,PT
---- correct output:
3
[3 1 1 1 1]
---- user output:
3
[3 1 1 1 1]
-- TEST CASE 2:
---- input:
PT,FR,FR,FR,FR,FR,PT,PT,ES,PT,ES,ES,ES,PT,IT
---- correct output:
5
[0 4 5 1 5]
---- user output:
5
[0 4 5 1 5]
-- TEST CASE 3:
---- input:
BE,IT,BE,IT,IT,BE,PT,IT,ES,PT,IT,PT,IT,IT,ES,ES,FR,FR,BE,PT,FR,ES,ES,FR,PT,BE,IT,PT,IT,PT,PT,IT
---- correct output:
10
[ 5  5  4 10  8]
---- user output:
10
[ 5  5  4 10  8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
